[Bug #18998] Honor `#to_str` next to `#to_int` in `Kernel#Integer`